tests/testcases/errors/BCE0080-1.boo
"""
BCE0080-1.boo(5,5): BCE0080: 'len' built-in function cannot be used as an expression.
BCE0080-1.boo(6,7): BCE0080: '__addressof__' built-in function cannot be used as an expression.
"""
a = len
print(__addressof__)
